@@ -1,0 +1,39 @@
+<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
+<!-- $Id$ -->
+<html> <head>
+<title>Environment Variables used by CIAO</title>
+</head>
+
+<body>
+<h1>Environment Variables used by CIAO</h1>
+
+<ul>
+<!--   <li><b><code></code></b><p> -->
+  <li><b><code>CIAO_DEBUG_LEVEL</code></b>: An interger value
+      accessible using <CODE>CIAO::debug_level()</CODE> call.
+      Currently, CIAO follow the following usage
+      conventions:
+      <ul>
+        <li> 20 &lt; debug_level &le; 20: Generate CIAO internal
+            debug messages
+        <li> 10 &lt; debug_level &le; 20: Generate CIAO tools
+            debug messages
+        <li> 0 &lt; debug_level &le; 10: Generate component-level
+            debug messages
+      </ul> <p>
+
+  <li><b><code>CIAO_FIFO_SCHED</code></b>: Defining this Env. Var to 1
+      will trigger ComponentServer to run in FIFO scheduling class.<p>
+
+  <li><B><CODE>CIAO_DUMP_SAMPLE_HISTORY</CODE></B>: This environment
+      variable was added for lack of component configuration support.
+      Set it to 1 to turn on the dumping of performance samples to
+      stdout in some performance test components.<p>
+</ul>
+
+<hr>
+<address>Nanbor Wang</address>
+<!-- hhmts start -->
+Last modified: Sun Nov 30 20:29:14 Mountain Standard Time 2003
+<!-- hhmts end -->
+</body> </html>
