@@ -39,6 +39,9 @@ resources for using <i>CIAO</i>.
       developers.  The information that matters for most users is how
       these configurations are represented in various XML
       descriptors and CIDL specifications.<p>
+
+  <li>CIAO uses some <a href="EnvVars.html">environment variables</a>
+      to manage the internal behaviors.
 </ul>
 
 <h2>CCM-defined Interface Diagrams</h2>
